--- a/Client-Components/chat-dashboard/chat.css
+++ b/Client-Components/chat-dashboard/chat.css
@@ -64,6 +64,14 @@ body {
   text-align: center;
   font-weight: bold;
 }
+.chat-add {
+  padding: 10px;
+  background-color: #ddd;
+  border-bottom: 1px solid #ddd;
+  font-size: 18px;
+  text-align: center;
+  font-weight: bold;
+}
 
 .chat-window {
   flex: 1;
